--- a/src/main/resources/themes/default/main.fxml
+++ b/src/main/resources/themes/default/main.fxml
@@ -112,10 +112,14 @@
         <HBox fx:id="rankedMatchNotificationPane" alignment="CENTER">
           <children>
             <Separator focusTraversable="false" orientation="VERTICAL"/>
-            <Button mnemonicParsing="false" onAction="#onAeonButtonClicked" styleClass="aeon-button"/>
-            <Button mnemonicParsing="false" onAction="#onUefButtonClicked" styleClass="uef-button"/>
-            <Button mnemonicParsing="false" onAction="#onCybranButtonClicked" styleClass="cybran-button"/>
-            <Button mnemonicParsing="false" onAction="#onSeraphimButtonClicked" styleClass="seraphim-button"/>
+            <Button mnemonicParsing="false" onAction="#onAeonButtonClicked"
+                    styleClass="small-faction-button, aeon-button"/>
+            <Button mnemonicParsing="false" onAction="#onUefButtonClicked"
+                    styleClass="small-faction-button, uef-button"/>
+            <Button mnemonicParsing="false" onAction="#onCybranButtonClicked"
+                    styleClass="small-faction-button, cybran-button"/>
+            <Button mnemonicParsing="false" onAction="#onSeraphimButtonClicked"
+                    styleClass="small-faction-button, seraphim-button"/>
           </children>
         </HBox>
         <Separator focusTraversable="false" orientation="VERTICAL"/>
