--- a/src/main/resources/themes/default/map_preview_large.fxml
+++ b/src/main/resources/themes/default/map_preview_large.fxml
@@ -11,26 +11,33 @@
     <ColumnConstraints />
     <ColumnConstraints />
       <ColumnConstraints />
-      <ColumnConstraints />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints />
       <RowConstraints />
+    <RowConstraints/>
     <RowConstraints />
   </rowConstraints>
    <children>
-      <ImageView fx:id="largeImagePreview" fitHeight="512.0" fitWidth="512.0" pickOnBounds="true" preserveRatio="true" styleClass="large-image-preview" GridPane.rowSpan="3">
+     <ImageView fx:id="largeImagePreview" fitHeight="512.0" fitWidth="512.0" pickOnBounds="true" preserveRatio="true"
+                styleClass="large-image-preview" GridPane.rowSpan="4">
          <GridPane.margin>
             <Insets />
          </GridPane.margin></ImageView>
-      <Label fx:id="mapNameLabel" styleClass="map-displayName-label" text="&lt;Map Name&gt;" GridPane.columnIndex="1" GridPane.vgrow="NEVER" />
-      <Label fx:id="maxPlayerLabel" styleClass="max-player-label" text="&lt;Max Player&gt;" GridPane.columnIndex="3" GridPane.vgrow="NEVER">
+     <Label fx:id="mapNameLabel" styleClass="map-displayName-label" text="&lt;Map Name&gt;" GridPane.columnIndex="1"
+            GridPane.columnSpan="2" GridPane.vgrow="NEVER"/>
+     <Label fx:id="maxPlayerLabel" styleClass="max-player-label" text="&lt;Max Player&gt;" GridPane.columnIndex="2"
+            GridPane.rowIndex="1" GridPane.vgrow="NEVER">
          <GridPane.margin>
             <Insets />
          </GridPane.margin></Label>
-      <Label fx:id="mapSizeLabel" styleClass="map-size-label" text="&lt;Map Size&gt;" GridPane.columnIndex="2" GridPane.vgrow="NEVER" />
-      <Label fx:id="mapDescriptionLabel" styleClass="map-description-label" text="&lt;Map Description&gt;" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-      <ScrollPane fitToWidth="true" hbarPolicy="NEVER" styleClass="comment-container-scroll-pane" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2">
+     <Label fx:id="mapSizeLabel" styleClass="map-size-label" text="&lt;Map Size&gt;" GridPane.columnIndex="1"
+            GridPane.rowIndex="1" GridPane.vgrow="NEVER"/>
+     <Label fx:id="mapDescriptionLabel" styleClass="map-description-label" text="&lt;Map Description&gt;"
+            wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.halignment="LEFT"
+            GridPane.rowIndex="2" GridPane.valignment="TOP"/>
+     <ScrollPane fitToWidth="true" hbarPolicy="NEVER" styleClass="comment-container-scroll-pane"
+                 GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="3">
          <content>
             <VBox fx:id="commentContainer" styleClass="comment-container" />
          </content>
