--- a/src/main/resources/themes/default/games_tiled.fxml
+++ b/src/main/resources/themes/default/games_tiled.fxml
@@ -9,7 +9,9 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<ScrollPane fx:id="tiledScrollPane" fitToWidth="true" hbarPolicy="NEVER" styleClass="games-tiled" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.GamesTiledController">
+<ScrollPane fx:id="tiledScrollPane" fitToWidth="true" hbarPolicy="NEVER" styleClass="games-tiled"
+            xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.faforever.client.game.GameTiledController">
    <content>
       <FlowPane fx:id="tiledFlowPane" nodeOrientation="LEFT_TO_RIGHT" prefWrapLength="0.0" vgap="10.0" />
    </content>
