--- a/src/main/resources/themes/default/persistent_notification.fxml
+++ b/src/main/resources/themes/default/persistent_notification.fxml
@@ -9,7 +9,8 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="notificationRoot" maxWidth="1.7976931348623157E308" minHeight="40.0" minWidth="100.0"
+<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="notificationRoot" maxWidth="1.7976931348623157E308"
+          minHeight="40.0" minWidth="100.0"
           prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40"
           fx:controller="com.faforever.client.notification.PersistentNotificationController">
   <columnConstraints>
