--- a/src/main/resources/themes/default/games.fxml
+++ b/src/main/resources/themes/default/games.fxml
@@ -54,10 +54,10 @@
             <VBox fx:id="gamePreviewPanel" maxHeight="1.7976931348623157E308" maxWidth="300.0" minHeight="0.0"
                   minWidth="0.0">
               <children>
-                <ImageView fx:id="mapImageView" fitWidth="256.0" pickOnBounds="true" preserveRatio="true"
-                           styleClass="map-preview"/>
-                <Label fx:id="gameTitleLabel" maxHeight="1.7976931348623157E308" styleClass="game-detail-title"
-                       text="&lt;Game title&gt;" wrapText="true">
+                <ImageView fx:id="mapImageView" fitWidth="256.0" onMouseClicked="#onMapLargePreview" pickOnBounds="true"
+                           preserveRatio="true" styleClass="map-preview"/>
+                <Label fx:id="gameTitleLabel" alignment="CENTER" maxHeight="1.7976931348623157E308"
+                       styleClass="game-detail-title" text="&lt;Game title&gt;" wrapText="true">
                   <padding>
                     <Insets left="10.0"/>
                   </padding>
@@ -75,6 +75,11 @@
                     <Insets left="10.0"/>
                   </padding>
                 </Label>
+                <Label fx:id="mapLabel" maxHeight="1.7976931348623157E308" text="&lt;Map&gt;">
+                  <padding>
+                    <Insets left="10.0"/>
+                  </padding>
+                </Label>
                 <Label fx:id="gameModeLabel" maxHeight="1.7976931348623157E308" text="&lt;Game mode&gt;">
                   <VBox.margin>
                     <Insets/>
@@ -83,19 +88,11 @@
                     <Insets left="10.0"/>
                   </padding>
                 </Label>
-                <Label fx:id="mapLabel" maxHeight="1.7976931348623157E308" text="&lt;Map&gt;">
-                  <padding>
-                    <Insets left="10.0"/>
-                  </padding>
+                <VBox fx:id="teamListPane">
                   <VBox.margin>
                     <Insets top="10.0"/>
                   </VBox.margin>
-                </Label>
-                <Label fx:id="mapDescriptionLabel" maxHeight="1.7976931348623157E308" text="&lt;Map description&gt;">
-                  <padding>
-                    <Insets left="10.0"/>
-                  </padding>
-                </Label>
+                </VBox>
               </children>
               <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
