--- a/src/main/resources/themes/default/chat_user_control.fxml
+++ b/src/main/resources/themes/default/chat_user_control.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
-<fx:root xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER_LEFT" onContextMenuRequested="#onContextMenuRequested"
-         spacing="5.0"
-         type="HBox" xmlns="http://javafx.com/javafx/8.0.40">
-  <ImageView fx:id="avatarImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true"
-             HBox.hgrow="NEVER"/>
-  <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true"/>
-  <Label fx:id="clanLabel"/>
-  <Label fx:id="usernameLabel" onMouseClicked="#onUsernameClicked" HBox.hgrow="ALWAYS"/>
-  <ImageView fx:id="statusImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true"
-             HBox.hgrow="NEVER"/>
+
+<fx:root alignment="CENTER_LEFT" onContextMenuRequested="#onContextMenuRequested" onMouseClicked="#onClick" spacing="5.0" styleClass="chat-user-control-root" type="HBox" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+  <ImageView fx:id="avatarImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER" />
+  <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true" />
+  <Label fx:id="clanLabel" />
+  <Label fx:id="usernameLabel" onMouseClicked="#onUsernameClicked" HBox.hgrow="ALWAYS" />
+  <ImageView fx:id="statusImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER" />
 </fx:root>
