--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -174,6 +174,11 @@
 }
 
 /***************** ChartPlot *****************/
+.chat-user-control-root:hover {
+  -fx-background-color: -fx-control-inner-background
+}
+
+/***************** ChartPlot *****************/
 
 .chart-vertical-grid-lines,
 .chart-horizontal-grid-lines {
