game tooltip cleanup and css fix

--- a/src/main/resources/themes/default/player_info_tooltip.fxml
+++ b/src/main/resources/themes/default/player_info_tooltip.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="playerInfoTooltipRoot" styleClass="popup"
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="playerInfoTooltipRoot" styleClass="player-info-tooltip"
       xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.chat.PlayerInfoTooltipController">
   <children>
     <Label fx:id="tooltipLabel" text="&lt;rating&gt;">
