--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -1,6 +1,6 @@
 .root {
   -fx-font-size: 14px;
-  -fx-font-smoothing-type: gray;
+  -fx-font-family: "Arial","Tahoma","sans-serif";
 
   /***************************************************************************
    *                                                                         *
@@ -155,7 +155,7 @@
 
   /* These are NOT from modena. */
   -fx-context-menu-background: rgba(0, 0, 0, .8);
-  -fx-tile-background: rgba(50, 50, 50, .9);
+  -fx-tile-background: #FFFFFF11;
   -fx-transparent-hover: rgba(255, 255, 255, .1);
   -fx-drop-shadow: dropshadow(gaussian, #ffffff66, 5, 0.5, 0, 0);
 }
@@ -171,6 +171,12 @@
 .scroll-bar > .increment-button:pressed > .increment-arrow,
 .scroll-bar > .decrement-button:pressed > .decrement-arrow {
     -fx-background-color: -fx-mark-highlight-color,derive(-fx-base,55%);
+}
+
+/***************** Headings *****************/
+
+.h1 {
+  -fx-font-size: 24px;
 }
 
 /***************** ChartPlot *****************/
@@ -701,6 +707,12 @@
 }
 #closeButton:pressed {
   -fx-background-color: derive(#D32F2F, -40%);
+}
+
+/***************** Community hub *****************/
+
+.communityHub > * {
+  -fx-background-color: -fx-tile-background;
 }
 
 /***************** Login *****************/
