fix corrupted imagesfor game status

--- a/src/main/resources/themes/default/chat_user_control.fxml
+++ b/src/main/resources/themes/default/chat_user_control.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
@@ -8,10 +9,14 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-<fx:root alignment="CENTER_LEFT" onContextMenuRequested="#onContextMenuRequested" spacing="5.0" styleClass="chat-user-control-root" type="HBox" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
-  <ImageView fx:id="avatarImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER" />
-  <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true" />
-  <Label fx:id="clanLabel" />
-  <Label fx:id="usernameLabel" HBox.hgrow="ALWAYS" />
-  <ImageView fx:id="statusImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER" />
+<fx:root alignment="CENTER_LEFT" minWidth="-Infinity" onContextMenuRequested="#onContextMenuRequested" spacing="5.0" styleClass="chat-user-control-root" type="HBox" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+  <ImageView fx:id="avatarImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="chat-user-control-avatar" HBox.hgrow="NEVER" />
+  <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true" styleClass="chat-user-control-country" />
+  <Label fx:id="clanLabel" styleClass="chat-user-control-avatar" />
+   <AnchorPane HBox.hgrow="SOMETIMES">
+      <children>
+        <Label fx:id="usernameLabel" onMouseClicked="#onUsernameClicked" styleClass="chat-user-control-username" AnchorPane.leftAnchor="0.0" />
+        <ImageView fx:id="statusImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true" styleClass="chat-user-control-status" AnchorPane.rightAnchor="0.0" />
+      </children>
+   </AnchorPane>  
 </fx:root>
