--- a/src/main/resources/themes/default/style-webview.css
+++ b/src/main/resources/themes/default/style-webview.css
@@ -5,99 +5,116 @@ All the following applies to the content of a WebViews (chat, news), therefore i
 *****************/
 
 html, body {
-  /* TODO WebView does not yet allow transparency. As a workaround, we use a black background together with WebView set to blend mode LIGHTEN. */
-  background-color: black;
-  margin: 0;
-  padding: 0;
-  /* Use same as -fx-light-text-color */
-  color: #F5F5F5;
-  font-family: "Arial","Tahoma","sans-serif";
+    /* TODO WebView does not yet allow transparency. As a workaround, we use a black background together with WebView set to blend mode LIGHTEN. */
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    /* Use same as -fx-light-text-color */
+    color: #F5F5F5;
+    font-family: "Arial", "Tahoma", "sans-serif";
 }
 
 a {
-  /* Use same as -fx-accent */
-  color: #609e15;
-  text-decoration: none;
+    /* Use same as -fx-accent */
+    color: #609e15;
+    text-decoration: none;
 }
 
 /***************** Chat (WebView) *****************/
 
 #chat-table {
-  width: 100%;
-  border-collapse: collapse;
+    width: 100%;
+    border-collapse: collapse;
 }
 
 .own-username {
-  color: orange;
+    color: orange;
 }
 
 .chat-message {
-  /* Same height as avatar */
-  line-height: 20px;
+    /* Same height as avatar */
+    line-height: 20px;
 }
 
 .chat-message.message .username::after {
-  content: ':';
+    content: ':';
 }
 
 .chat-message.action {
-  font-style: italic;
+    font-style: italic;
 }
 
 .chat-message:nth-of-type(odd) {
-  background-color: rgba(255,255,255,0.06667);
+    background-color: rgba(255, 255, 255, 0.06667);
 }
 
 .chat-message * {
-  padding: 0 2px;
-  word-wrap: break-word;
+    padding: 0 2px;
+    word-wrap: break-word;
 }
 
 .chat-message td {
-  vertical-align: top;
+    vertical-align: top;
 }
 
 .chat-message .time {
 }
 
 .chat-message > .avatar {
-  width: 40;
-  height: 20px;
-  padding: 0 2px;
+    width: 40;
+    height: 20px;
+    padding: 0 2px;
 }
 
-.avatar>img {
-  display: block;
+.avatar > img {
+    display: block;
 }
 
 .chat-message .text {
-  width: 100%;
+    width: 100%;
 }
 
 .chat-message .username {
-  /* I really don't know where else this is set that makes !important necessary */
-  padding-right: 10px !important;
-  max-width: 50%;
-  text-align: right;
-  white-space: nowrap;
+    /* I really don't know where else this is set that makes !important necessary */
+    padding-right: 10px !important;
+    max-width: 50%;
+    text-align: right;
+    white-space: nowrap;
 }
 
 .chat-message.self {
-  color: orange;
+    color: orange;
+}
+
+/*ugly color*/
+.chat-message.friend {
+    color: #00B7EB;
+}
+
+.chat-message.mod {
+    color: white;
+}
+
+.chat-message.reg {
+    color: #BFBEBA;
+}
+
+.chat-message.irc {
+    color: #808080;
 }
 
 .chat-message .time {
-  white-space: nowrap;
+    white-space: nowrap;
 }
 
 /***************** News (WebView) *****************/
 
 html.news-detail {
-  padding: 20px;
+    padding: 20px;
 }
 
 .news-detail img {
-  display: block;
-  max-width: 100%;
-  height: auto !important;
+    display: block;
+    max-width: 100%;
+    height: auto !important;
 }
