--- a/src/main/resources/themes/default/channel_tab.fxml
+++ b/src/main/resources/themes/default/channel_tab.fxml
@@ -26,31 +26,33 @@
                   <VBox fx:id="usersVBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                     <children>
                       <TitledPane focusTraversable="false" maxWidth="1.7976931348623157E308"
-                                  text="%chat.category.moderators">
+                                  styleClass="channel-tab-moderators-title" text="%chat.category.moderators">
                         <content>
-                          <VBox fx:id="moderatorsPane"/>
+                          <VBox fx:id="moderatorsPane" styleClass="channel-tab-moderators-users"/>
                         </content>
                       </TitledPane>
                       <TitledPane focusTraversable="false" maxWidth="1.7976931348623157E308"
-                                  text="%chat.category.friends">
+                                  styleClass="channel-tab-friends-title" text="%chat.category.friends">
                         <content>
-                          <VBox fx:id="friendsPane"/>
+                          <VBox fx:id="friendsPane" styleClass="channel-tab-friends-users"/>
                         </content>
                       </TitledPane>
                       <TitledPane focusTraversable="false" maxWidth="1.7976931348623157E308"
-                                  text="%chat.category.others">
+                                  styleClass="channel-tab-others-title" text="%chat.category.others">
                         <content>
-                          <VBox fx:id="othersPane"/>
+                          <VBox fx:id="othersPane" styleClass="channel-tab-others-users"/>
                         </content>
                       </TitledPane>
-                      <TitledPane focusTraversable="false" maxWidth="1.7976931348623157E308" text="%chat.category.irc">
+                      <TitledPane focusTraversable="false" maxWidth="1.7976931348623157E308"
+                                  styleClass="channel-tab-irc-title" text="%chat.category.irc">
                         <content>
-                          <VBox fx:id="chatOnlyPane"/>
+                          <VBox fx:id="chatOnlyPane" styleClass="channel-tab-irc-users"/>
                         </content>
                       </TitledPane>
-                      <TitledPane focusTraversable="false" maxWidth="1.7976931348623157E308" text="%chat.category.foes">
+                      <TitledPane focusTraversable="false" maxWidth="1.7976931348623157E308"
+                                  styleClass="channel-tab-foes-title" text="%chat.category.foes">
                         <content>
-                          <VBox fx:id="foesPane"/>
+                          <VBox fx:id="foesPane" styleClass="channel-tab-foes-users"/>
                         </content>
                       </TitledPane>
                     </children>
