--- a/src/main/resources/themes/default/channel_tab.fxml
+++ b/src/main/resources/themes/default/channel_tab.fxml
@@ -25,31 +25,31 @@
                 <content>
                   <VBox fx:id="usersVBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                     <children>
-                      <TitledPane focusTraversable="false" maxWidth="1.7976931348623157E308"
+                      <TitledPane fx:id="moderatorsTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308"
                                   styleClass="channel-tab-moderators-title" text="%chat.category.moderators">
                         <content>
                           <VBox fx:id="moderatorsPane" styleClass="channel-tab-moderators-users"/>
                         </content>
                       </TitledPane>
-                      <TitledPane focusTraversable="false" maxWidth="1.7976931348623157E308"
+                      <TitledPane fx:id="friendsTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308"
                                   styleClass="channel-tab-friends-title" text="%chat.category.friends">
                         <content>
                           <VBox fx:id="friendsPane" styleClass="channel-tab-friends-users"/>
                         </content>
                       </TitledPane>
-                      <TitledPane focusTraversable="false" maxWidth="1.7976931348623157E308"
+                      <TitledPane fx:id="othersTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308"
                                   styleClass="channel-tab-others-title" text="%chat.category.others">
                         <content>
                           <VBox fx:id="othersPane" styleClass="channel-tab-others-users"/>
                         </content>
                       </TitledPane>
-                      <TitledPane focusTraversable="false" maxWidth="1.7976931348623157E308"
+                      <TitledPane fx:id="ircTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308"
                                   styleClass="channel-tab-irc-title" text="%chat.category.irc">
                         <content>
                           <VBox fx:id="chatOnlyPane" styleClass="channel-tab-irc-users"/>
                         </content>
                       </TitledPane>
-                      <TitledPane focusTraversable="false" maxWidth="1.7976931348623157E308"
+                      <TitledPane fx:id="foesTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308"
                                   styleClass="channel-tab-foes-title" text="%chat.category.foes">
                         <content>
                           <VBox fx:id="foesPane" styleClass="channel-tab-foes-users"/>
