--- a/src/main/resources/themes/default/style-webview.css
+++ b/src/main/resources/themes/default/style-webview.css
@@ -5,7 +5,7 @@ All the following applies to the content of a WebViews (chat, news), therefore i
 *****************/
 
 html, body {
-  /* TODO WebView does not yet allow transparency. As a workaround, we use a black background together with WebView set to blend mode LIGHTEN. */
+  /* TODO JDK-8116513 WebView does not yet allow transparency. As a workaround, we use a black background together with WebView set to blend mode ADD. */
   background-color: black;
   margin: 0;
   padding: 0;
