--- a/src/main/resources/themes/default/games.fxml
+++ b/src/main/resources/themes/default/games.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -16,8 +11,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
-<VBox fx:id="gamesRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.GamesController">
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="gamesRoot" maxHeight="1.7976931348623157E308"
+      maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" spacing="10.0"
+      xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.game.GamesController">
   <children>
     <HBox alignment="BASELINE_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
       <children>
@@ -27,8 +23,8 @@
             <Button fx:id="createGameButton" layoutX="14.0" layoutY="3.0" mnemonicParsing="false" onAction="#onCreateGameButtonClicked" text="%games.create" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="7.0" />
             <MenuButton fx:id="switchViewButton" mnemonicParsing="false" text="%games.view" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="7.0">
               <items>
-                <MenuItem fx:id="tiledButton" mnemonicParsing="false" onAction="#onTileButtonPressed" text="%games.view.tiled" />
-                <MenuItem fx:id="tableButton" mnemonicParsing="false" onAction="#onTableButtonPressed" text="%games.view.table" />
+                <MenuItem mnemonicParsing="false" onAction="#onTilesButtonPressed" text="%games.view.tiles"/>
+                <MenuItem mnemonicParsing="false" onAction="#onTableButtonPressed" text="%games.view.table"/>
               </items>
             </MenuButton>
           </children>
