global/ladder rating tooltip, fixed images, channelTab width assigned to preference

--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -178,15 +178,7 @@
   -fx-background-color: -fx-control-inner-background
 }
 
-.chat-user-control-country:hover {
-  -fx-background-color: -fx-control-inner-background
-}
-
-.chat-user-control-clan:hover {
-  -fx-background-color: -fx-control-inner-background
-}
-
-.chat-user-control-username:hover {
+.chat-user-control-username.chat-user-control-clan.chat-user-control-country:hover {
   -fx-background-radius: 1.5, 1.5, 1.5, 1.5;
   -fx-background-insets: 1.2, 1.2, 1.2, 1.2;
   -fx-background-color: -fx-control-inner-background
