--- a/src/main/resources/themes/default/channel_tab.fxml
+++ b/src/main/resources/themes/default/channel_tab.fxml
@@ -17,11 +17,11 @@
           <WebView fx:id="messagesWebView" blendMode="ADD" minHeight="100.0" minWidth="100.0" prefHeight="-1.0"
                    prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                    AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
-          <VBox maxHeight="1.7976931348623157E308" minWidth="250.0" prefWidth="250.0"
+          <VBox fx:id="channelTabScrollPaneVBox" maxHeight="1.7976931348623157E308"
                 SplitPane.resizableWithParent="false">
             <children>
               <TextField fx:id="userSearchTextField" promptText="%chat.searchPrompt"/>
-              <ScrollPane fitToWidth="true" focusTraversable="false" VBox.vgrow="ALWAYS">
+              <ScrollPane fitToWidth="true" focusTraversable="false" hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
                 <content>
                   <VBox fx:id="usersVBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                     <children>
