--- a/src/main/resources/themes/default/channel_tab.fxml
+++ b/src/main/resources/themes/default/channel_tab.fxml
@@ -8,51 +8,42 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.web.WebView?>
-<Tab fx:id="channelTabRoot" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-     fx:controller="com.faforever.client.chat.ChannelTabController">
+<Tab fx:id="channelTabRoot" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.chat.ChannelTabController">
   <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
     <children>
       <SplitPane dividerPositions="0.9" focusTraversable="false" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
         <items>
-          <WebView fx:id="messagesWebView" blendMode="ADD" minHeight="100.0" minWidth="100.0" prefHeight="-1.0"
-                   prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
-          <VBox fx:id="channelTabScrollPaneVBox" maxHeight="1.7976931348623157E308"
-                SplitPane.resizableWithParent="false">
+          <WebView fx:id="messagesWebView" blendMode="ADD" minHeight="100.0" minWidth="100.0" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+          <VBox fx:id="channelTabScrollPaneVBox" maxHeight="1.7976931348623157E308" SplitPane.resizableWithParent="false">
             <children>
-              <TextField fx:id="userSearchTextField" promptText="%chat.searchPrompt"/>
+              <TextField fx:id="userSearchTextField" />
               <ScrollPane fitToWidth="true" focusTraversable="false" hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
                 <content>
                   <VBox fx:id="usersVBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                     <children>
-                      <TitledPane fx:id="moderatorsTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308"
-                                  styleClass="channel-tab-moderators-title" text="%chat.category.moderators">
+                      <TitledPane fx:id="moderatorsTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308" styleClass="channel-tab-moderators-title" text="%chat.category.moderators">
                         <content>
-                          <VBox fx:id="moderatorsPane" styleClass="channel-tab-moderators-users"/>
+                          <VBox fx:id="moderatorsPane" styleClass="channel-tab-moderators-users" />
                         </content>
                       </TitledPane>
-                      <TitledPane fx:id="friendsTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308"
-                                  styleClass="channel-tab-friends-title" text="%chat.category.friends">
+                      <TitledPane fx:id="friendsTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308" styleClass="channel-tab-friends-title" text="%chat.category.friends">
                         <content>
-                          <VBox fx:id="friendsPane" styleClass="channel-tab-friends-users"/>
+                          <VBox fx:id="friendsPane" styleClass="channel-tab-friends-users" />
                         </content>
                       </TitledPane>
-                      <TitledPane fx:id="othersTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308"
-                                  styleClass="channel-tab-others-title" text="%chat.category.others">
+                      <TitledPane fx:id="othersTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308" styleClass="channel-tab-others-title" text="%chat.category.others">
                         <content>
-                          <VBox fx:id="othersPane" styleClass="channel-tab-others-users"/>
+                          <VBox fx:id="othersPane" styleClass="channel-tab-others-users" />
                         </content>
                       </TitledPane>
-                      <TitledPane fx:id="ircTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308"
-                                  styleClass="channel-tab-irc-title" text="%chat.category.irc">
+                      <TitledPane fx:id="ircTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308" styleClass="channel-tab-irc-title" text="%chat.category.irc">
                         <content>
-                          <VBox fx:id="chatOnlyPane" styleClass="channel-tab-irc-users"/>
+                          <VBox fx:id="chatOnlyPane" styleClass="channel-tab-irc-users" />
                         </content>
                       </TitledPane>
-                      <TitledPane fx:id="foesTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308"
-                                  styleClass="channel-tab-foes-title" text="%chat.category.foes">
+                      <TitledPane fx:id="foesTitlePane" focusTraversable="false" maxWidth="1.7976931348623157E308" styleClass="channel-tab-foes-title" text="%chat.category.foes">
                         <content>
-                          <VBox fx:id="foesPane" styleClass="channel-tab-foes-users"/>
+                          <VBox fx:id="foesPane" styleClass="channel-tab-foes-users" />
                         </content>
                       </TitledPane>
                     </children>
@@ -63,8 +54,7 @@
           </VBox>
         </items>
       </SplitPane>
-      <TextField fx:id="messageTextField" maxWidth="1.7976931348623157E308" onAction="#onSendMessage"
-                 onKeyPressed="#onKeyPressed" promptText="%chat.messagePrompt"/>
+      <TextField fx:id="messageTextField" maxWidth="1.7976931348623157E308" onAction="#onSendMessage" onKeyPressed="#onKeyPressed" promptText="%chat.messagePrompt" />
     </children>
   </VBox>
 </Tab>
