Fixing #90 Player statistics not displaying

--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -1,6 +1,6 @@
 .root {
   -fx-font-size: 14px;
-  -fx-font-family: "Arial","Tahoma","sans-serif";
+  -fx-font-family: "Segoe UI","Arial","Tahoma","sans-serif";
 
   /***************************************************************************
    *                                                                         *
