--- a/src/main/resources/themes/default/games.fxml
+++ b/src/main/resources/themes/default/games.fxml
@@ -45,36 +45,30 @@
             <VBox fx:id="gamePreviewPanel" maxHeight="1.7976931348623157E308" maxWidth="300.0" minHeight="0.0" minWidth="0.0">
               <children>
                 <ImageView fx:id="mapImageView" fitWidth="256.0" onMouseClicked="#onMapLargePreview" pickOnBounds="true" preserveRatio="true" styleClass="map-preview" />
-                <Label fx:id="gameTitleLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" styleClass="game-detail-title" text="&lt;Game title&gt;" wrapText="true">
-                  <padding>
-                    <Insets left="10.0" />
-                  </padding>
+                <Label fx:id="gameTitleLabel" alignment="CENTER" styleClass="game-detail-title"
+                       text="&lt;Game title&gt;" wrapText="true"/>
+                <Label fx:id="gameTypeLabel" text="&lt;Game type&gt;">
+                  <VBox.margin>
+                    <Insets bottom="5.0"/>
+                  </VBox.margin>
                 </Label>
-                <Label fx:id="numberOfPlayersLabel" maxHeight="1.7976931348623157E308" text="&lt;Number of players&gt;">
-                  <padding>
-                    <Insets left="10.0" />
-                  </padding>
+                <Label fx:id="mapLabel" text="&lt;Map&gt;">
+                  <graphic>
+                    <Label styleClass="fontawesome" text=""/>
+                  </graphic>
                 </Label>
-                <Label fx:id="hosterLabel" maxHeight="1.7976931348623157E308" text="&lt;Hoster&gt;">
+                <Label fx:id="numberOfPlayersLabel" text="&lt;Number of players&gt;">
+                  <graphic>
+                    <Label styleClass="fontawesome" text=""/>
+                  </graphic>
+                </Label>
+                <Label fx:id="hostLabel" text="&lt;Hoster&gt;">
                   <VBox.margin>
                     <Insets />
                   </VBox.margin>
-                  <padding>
-                    <Insets left="10.0" />
-                  </padding>
-                </Label>
-                <Label fx:id="mapLabel" maxHeight="1.7976931348623157E308" text="&lt;Map&gt;">
-                  <padding>
-                    <Insets left="10.0" />
-                  </padding>
-                </Label>
-                <Label fx:id="gameModeLabel" maxHeight="1.7976931348623157E308" text="&lt;Game mode&gt;">
-                  <VBox.margin>
-                    <Insets />
-                  </VBox.margin>
-                  <padding>
-                    <Insets left="10.0" />
-                  </padding>
+                  <graphic>
+                    <Label styleClass="fontawesome" text=""/>
+                  </graphic>
                 </Label>
                 <VBox fx:id="teamListPane">
                   <VBox.margin>
