--- a/src/main/resources/themes/default/game_tooltip.fxml
+++ b/src/main/resources/themes/default/game_tooltip.fxml
@@ -3,10 +3,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="teamListRoot" styleClass="game-tooltip"
-      xmlns="http://javafx.com/javafx/null" fx:controller="com.faforever.client.game.GameTooltipController">
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="teamListRoot" styleClass="game-tooltip" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.game.GameTooltipController">
   <children>
-    <HBox fx:id="teamsPane" prefWidth="200.0"/>
-    <Label fx:id="modsLabel" alignment="BOTTOM_LEFT" text="&lt;Mods&gt;"/>
+    <HBox fx:id="teamsPane" styleClass="teams-pane" prefWidth="200.0" spacing="10.0" />
+    <Label fx:id="modsLabel" alignment="BOTTOM_LEFT" text="&lt;Mods&gt;" />
   </children>
 </VBox>
